# sfdata-schema

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: hierarchical-data.md
sfdata_schema/: __init__.py  _data.py
sfdata_schema/docgen/: __main__.py  cli.py
sfdata_schema/docgen/erd/: __init__.py
sfdata_schema/docgen/erd/templates/: erd.dot
sfdata_schema/docgen/jekyll/: __init__.py
sfdata_schema/docgen/jekyll/templates/jekyll/: Gemfile  _config.yml  index.md  records.html
sfdata_schema/docgen/jekyll/templates/jekyll/_layouts/: record.html
sfdata_schema/erd/: __init__.py
sfdata_schema/parser/: __init__.py
sfdata_schema/spec/: __init__.py  _data.py  datatypes.py
tests/: conftest.py  test_erd.py  test_from_values.py  test_jekyll.py  test_parse.py  test_parse_single.py  test_specification.py
tests/fixtures/: single-file-schema.json  single-file-schema.yml
